# retail-customer-support-agent

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  TECHNICAL_ARCHITECTURE.md  architecture.mermaid  pyproject.toml  reasonix.toml
.codebase-memory/: artifact.json  graph.db.zst
.github/: copilot-instructions.md
.kunsdd/plan/: skill-using-superpowers-review当前phase5的spec和plans文档-看看是否有可优化的空间.md
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
app/: __init__.py  config.py  pydantic_compat.py
app/agent/: action_candidates.py  action_specs.py  builders.py  confirmation.py  context_builder.py  extraction.py  graph.py  guard.py  llm_agent.py  llm_client.py  models.py  offline_demo.py  parsers.py  pipeline.py  plan_handlers.py  prompts.py  providers.py  replay.py  runtime.py  screen_pop.py  security.py  tool_observations.py
app/analysis/: tau_task_analyzer.py
app/cli/: chat.py  eval.py  flywheel.py
app/dashboard/: __init__.py  builder.py  cli.py
app/eval/: bad_case_store.py  baseline.py  cases.py  flywheel.py  (+8 more)
brain/: DECISIONS.md  HANDOFF.md  MAP.md  PROJECT.md  README.md  STATUS.md
cases/: golden.yaml
cr/: CR-001-retail-customer-support-agent.md  prompt-optimization-analysis.md
diagrams/: agentloop-mermaid.md
docs/: DESIGN_SPEC.md  data-flow-architecture.html  data-flow.md  design-audit.md  design-llm-agent-tool-calling.md  discussion-llm-agent-architecture.md  discussion_with_cc.md  eval-pass-rate-improvement.md  long-term-optimization-path.md  phase5-capability-matrix.md  portfolio-architecture.md  tau-task-space-analysis.md
prompts/: action_planner_v001.md  core_contract_v001.md  intent_slot_v001.md  llm_agent_system_v001.md  policy_reasoner_v001.md  response_generator_v001.md
tests/: test_agent_core.py  test_bad_case_store.py  test_cli_flywheel.py  test_confirmation_competing.py  test_context_builder.py  test_context_builder_rich.py  test_dashboard_builder.py  test_eval_cli.py  test_eval_runner.py  test_flywheel.py  test_generalization.py  test_golden_set.py  test_list_user_orders.py  test_live_eval_triage.py  test_llm_agent.py  test_phase0_checks.py  test_phase0_results.py  test_preflight_routing.py  test_providers.py  test_runtime_phase4.py  test_screen_pop.py  test_security_detection.py  test_session_state.py  test_skill_registry.py  test_synthetic.py  test_tau_loader.py  test_tau_task_analyzer.py  test_tau_user_simulator.py  test_tool_calling_provider.py  test_tool_observations.py  test_tool_schema.py  test_trace_replay_harness.py  test_workbench_agentops.py  test_workbench_api.py  test_workbench_cases.py  test_workbench_cli.py  test_workbench_errors.py  test_workbench_session.py  test_workbench_snapshot.py
workbench/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+131 files in other folders)
