[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retail-customer-support-agent"
version = "0.1.0"
description = "Transaction-oriented retail customer support agent baseline tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.70",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
phase0-check = "app.phase0.cli:check_main"
phase0-report = "app.phase0.cli:report_main"
phase0-smoke = "app.phase0.cli:smoke_main"
phase1-chat = "app.cli.chat:chat_main"
phase2-eval = "app.cli.eval:eval_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
